<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/novoda_blue"
  tools:context="com.novoda.frankboylan.meetingseating.LoginActivity"
  tools:layout_editor_absoluteY="25dp"
  tools:layout_editor_absoluteX="0dp"
  android:id="@+id/cl_login_activity">

  <EditText
    android:id="@+id/tv_login_email"
    android:layout_width="305dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="@color/white"
    android:ems="10"
    android:hint="Enter your email "
    android:inputType="textEmailAddress"
    android:text="testing@novoda.co.uk"
    android:textColor="@color/white"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.089999974" />

  <EditText
    android:id="@+id/tv_login_password"
    android:layout_width="305dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:backgroundTint="@color/white"
    android:ems="10"
    android:hint="Enter your password "
    android:inputType="textPassword"
    android:text="pass123"
    android:textAlignment="viewStart"
    android:textColor="@color/white"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="@+id/tv_login_email"
    app:layout_constraintStart_toStartOf="@+id/tv_login_email"
    app:layout_constraintTop_toBottomOf="@+id/tv_login_email" />

  <Button
    android:id="@+id/btn_login"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="305dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:background="@drawable/button_orange"
    android:onClick="handlerLogin"
    android:text="@string/login_signin_button"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

  <CheckBox
    android:id="@+id/cb_remember_me"
    android:layout_width="0dp"
    android:layout_height="45dp"
    android:layout_marginTop="32dp"
    android:buttonTint="@color/white"
    android:checked="false"
    android:text="@string/login_remember_me"
    android:textColor="@color/white"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="@+id/tv_login_password"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/tv_login_password"
    app:layout_constraintTop_toBottomOf="@+id/tv_login_password" />

  <Button
    android:id="@+id/btn_signup"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="305dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/button_navy"
    android:onClick="handlerCreateAccount"
    android:padding="15dp"
    android:text="@string/login_newacct_button"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_login"
    app:layout_constraintVertical_bias="0.0" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="55dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.100000024"
    app:srcCompat="@drawable/novoda_logo" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:fontFamily="@font/duaselightdisplay"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="35sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/imageView"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toBottomOf="@+id/imageView"
    app:layout_constraintVertical_bias="0.00999999" />

</android.support.constraint.ConstraintLayout>
